Calculator Application Updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="calculator-container">
 
-<input type="text"  id="input" disabled>
+<input type="text"  id="input" readonly>
 
 <table>
     <tr>
